// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $302.00
</div>
`;

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<div>
  Viewing 
  3
   
  expenses
   totalling 
  $905.00
</div>
`;
